Issue tracker at http://code.google.com/p/pyftpdlib/issues/list


History
=======

Version: 0.6.0 - Date: XXXX-XX-XX
---------------------------------

Enhancements:

 * Issue 124: pyftpdlib now accepts command line options to configure a stand
   alone anonymous FTP server when running pyftpdlib with python's -m option.

Bugfixes:

 * Issue #120: an ActiveDTP() instance is not garbage collected in case a
   client issuing PORT disconnects before establishing the data connection.

 * Issue #122: a wrong variable name was used in AbstractedFS.validpath method.

 * Issue #123: PORT command doesn't bind to correct address in case an alias
   is created for the local network interface.

API changes since 0.5.2:

 * FTPHandler.data_server attribute renamed in FTPHandler._dtp_acceptor.

 * ActiveDTP.source_address attribute has been added.


Version: 0.5.2 - Date: 2009-09-14
---------------------------------

Enhancements:

 * Issue #103: added unix_daemon.py script.

 * Issue #108: a new ThrottledDTPHandler class has been added for limiting the
   speed of downloads and uploads.

Bugfixes:

 * Issue #100: fixed a race condition in FTPHandler constructor which could
   throw an exception in case of connection bashing (DoS).  (thanks Bram Neijt)

 * Issue #102: FTPServer.close_all() now removes any unfired delayed call left
   behind to prevent potential memory leaks.

 * Issue #104: fixed a bug in FTPServer.handle_accept() where socket.accept()
   could return None instead of a valid address causing the server to crash.
   (OS X only, reported by Wentao Han)

 * Issue #104: an unhandled EPIPE exception might be thrown by asyncore.recv()
   when dealing with ill-behaved clients on OS X . (reported by Wentao Han)

 * Issue #105: ECONNABORTED might be thrown by socket.accept() on FreeBSD
   causing the server to crash.

 * Issue #109: an unhandled EBADF exception might be thrown when using poll() on
   OS X and FreeBSD.
