@@ -132,6 +132,13 @@ More info can be found here: [http://www.proftpd.org/docs/howto/FXP.html http://
 
 Yes. It is disabled by default for security reasons (see [http://gim.org.pl/rfcs/rfc2577.html RFC-2257] and [http://www.cert.org/advisories/CA-1997-27.html FTP bounce attack description]) but in case you want to enable it just set to True the `permit_foreign_addresses` attribute of `FTPHandler` class.
 
+== Why timestamps shown by MDTM and ls commands (LIST, MLSD, MLST) are wrong? ==
+
+If by "wrong" you mean "different from the timestamp of that file on my client machine", then that is the expected behavior.
+Starting from version 0.6.0 pyftpdlib uses [http://en.wikipedia.org/wiki/Greenwich_Mean_Time GMT times] as recommended in [http://tools.ietf.org/html/rfc3659 RFC-3659].
+In case you want such commands to report local times instead just set the `FTPHandler.use_gmt_times` attribute to `False`.
+For further information you might want to take a look at [http://www.proftpd.org/docs/howto/Timestamps.html this] Proftpd FAQ.
+
 ----
 
 = Implementation =
@@ -139,7 +146,7 @@ Yes. It is disabled by default for security reasons (see [http://gim.org.pl/rfcs
 == Globbing / STAT command implementation ==
 
 Globbing is a common Unix shell mechanism for expanding wildcard patterns to match multiple filenames. When an argument is provided to the *STAT* command, ftpd should return directory listing over the command channel.
-[http://www.faqs.org/rfcs/rfc959.html RFC-959] does not explicitly mention globbing; this means that FTP servers are not required to support globbing in order to be compliant.  However, many FTP servers do support globbing as a measure of convenience for FTP clients and users.
+[http://tools.ietf.org/html/rfc959 RFC-959] does not explicitly mention globbing; this means that FTP servers are not required to support globbing in order to be compliant.  However, many FTP servers do support globbing as a measure of convenience for FTP clients and users.
 In order to search for and match the given globbing expression, the code has to search (possibly) many directories, examine each contained filename, and build a list of matching files in memory.
 Since this operation can be quite intensive, both CPU- and memory-wise, pyftpdlib _does not_ support globbing.
 
@@ -147,11 +154,11 @@ Since this operation can be quite intensive, both CPU- and memory-wise, pyftpdli
 
 Properly handling the SIZE command when TYPE ASCII is used would require to scan the entire file to perform the ASCII translation logic (file.read().replace(os.linesep, '\r\n')) and then calculating the len of such data which may be different than the actual size of the file on the server.
 Considering that calculating such result could be very resource-intensive it could be easy for a malicious client to try a DoS attack, thus pyftpdlib rejects SIZE when the current TYPE is ASCII.
-However, clients in general should not be resuming downloads in ASCII mode.  Resuming downloads in binary mode is the recommended way as specified in [http://www.faqs.org/rfcs/rfc3659.html RFC-3659].
+However, clients in general should not be resuming downloads in ASCII mode.  Resuming downloads in binary mode is the recommended way as specified in [http://tools.ietf.org/html/rfc3659 RFC-3659].
 
 == IPv6 support ==
 
-Starting from version 0.4.0 pyftpdlib _supports_ IPv6 ([http://www.faqs.org/rfcs/rfc2428.html RFC-2428]).
+Starting from version 0.4.0 pyftpdlib _supports_ IPv6 ([http://tools.ietf.org/html/rfc2428 RFC-2428]).
 If you use IPv6 and want your FTP daemon to do so just pass a valid IPv6 address to the FTPServer class constructor. Example:
 
 {{{
@@ -180,7 +187,7 @@ Example UNIX and Windows FTP servers contained in the [http://code.google.com/p/
 
 == Does pyftpdlib support FTP over TLS/SSL (FTPS) ==
 
-The standard code base does not offer any "official" FTPS support yet but starting from version [http://pyftpdlib.googlecode.com/files/pyftpdlib-0.5.1.tar.gz 0.5.1] the [http://code.google.com/p/pyftpdlib/source/browse/trunk/demo demo] directory contains a [http://code.google.com/p/pyftpdlib/source/browse/trunk/demo/tls_ftpd.py script] which implements a simple FTPS daemon supporting both TLS and SSL protocols and *AUTH*, *PBSZ* and *PROT* commands as defined in [http://www.ietf.org/rfc/rfc4217.txt RFC-4217].
+The standard code base does not offer any "official" FTPS support yet but starting from version [http://pyftpdlib.googlecode.com/files/pyftpdlib-0.5.1.tar.gz 0.5.1] the [http://code.google.com/p/pyftpdlib/source/browse/trunk/demo demo] directory contains a [http://code.google.com/p/pyftpdlib/source/browse/trunk/demo/tls_ftpd.py script] which implements a simple FTPS daemon supporting both TLS and SSL protocols and *AUTH*, *PBSZ* and *PROT* commands as defined in [http://tools.ietf.org/html/rfc4217 RFC-4217].
 
 == What about SITE commands? ==
 
