@@ -174,6 +174,7 @@ Four new commands are added: "SIZE", "MDTM", "MLST", and "MLSD".  The existing c
 || SIZE command || YES || 0.1.0 || Get file size. || In case of ASCII TYPE it does not perform the ASCII conversion to avoid DoS conditions (see FAQs for more details). ||
 || TVSF mechanism || YES || 0.1.0 || Provide a file system naming conventions modeled loosely upon those of the Unix file system supporting relative and absolute path names. || ||
 || Minimum required set of MLST facts || YES || 0.3.0 || If conceivably possible, support at least the type, perm, size, unique, and modify MLSX command facts. || ||
+|| GMT should be used for timestamps || YES || 0.6.0 || All times reported by MDTM, LIST, MLSD and MLST commands must be in GMT times || Possibility to change time display between GMT and local time provided as `FTPHandler.use_gmt_times` attribute ||
 
 <br>
 
